# pyrust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
assets/: jieba_100k.txt
crates/dict/: Cargo.toml
crates/dict/src/: base_dict.rs  dat_dict.rs  lib.rs  pinyin_table.rs  trie.rs  user_dict.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: bigram.rs  fuzzy_pinyin.rs  lib.rs  pinyin.rs  sorter.rs  state_machine.rs
crates/platform-adapter/: Cargo.toml
crates/platform-adapter/src/: lib.rs
crates/platform-adapter/src/dev/: mod.rs
crates/platform-adapter/src/mac/: adapter.rs  mod.rs
crates/platform-adapter/src/win/: adapter.rs  mod.rs
crates/tsf/: Cargo.toml  build.rs
crates/tsf/src/: bridge.rs  composition.rs  display_attrs.rs  dll_exports.rs  edit_session.rs  key_sink.rs  lib.rs  registry.rs  thread_mgr_events.rs  tip.rs
crates/ui-crate/: Cargo.toml
crates/ui-crate/src/: candidate_window.rs  lib.rs  renderer.rs  theme.rs  window.rs
crates/yas-config/: Cargo.toml
crates/yas-config/src/: lib.rs  types.rs
dict-compiler/: Cargo.toml
dict-compiler/src/: dat_builder.rs  main.rs  parser.rs  serialize.rs
docs/: tsf-troubleshooting.md
docs/superpowers/specs/: 2026-04-29-personal-ime-design.md  2026-05-06-composition-compat-design.md
inputd/: Cargo.toml
inputd/src/: main.rs
pyrust/: Cargo.toml
pyrust/src/: logger.rs  main.rs
scripts/: build-tsf.ps1  build.ps1  convert_jieba.py  generate_bigram.py  package-for-windows.sh  run.ps1  sync-to-windows.sh
