[package]
name = "tsf"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
engine-core = { path = "../engine-core" }
platform-adapter = { path = "../platform-adapter" }
ui-crate = { path = "../ui-crate" }
dict = { path = "../dict" }
yas-config = { path = "../yas-config" }
crossbeam-channel = "0.5"
log = "0.4"
anyhow = "1"
notify = "6"
directories = "5"
windows = { version = "0.58", features = [
    "Win32_UI_TextServices",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "implement",
]}
windows-core = "0.58"
