[package]
name = "ui-crate"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-core = { path = "../engine-core" }
yas-config = { path = "../yas-config" }
crossbeam-channel = "0.5"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
]
